# cad-assembly-planner

./: .gitignore  pyproject.toml
docs/superpowers/specs/: 2026-07-06-cad-assembly-planner-design.md
out2/: instructions.txt  plan.json
src/asmplan/: __init__.py  classify.py  cli.py  contact.py  geometry.py  guided.py  invariants.py  loader.py  motion.py  schema.py  sequencer.py
src/asmplan/catalog/: __init__.py  fasteners.py
src/asmplan/emit/: __init__.py  animation.py  guided_animation.py  inspect_view.py  instructions.py  plan_io.py  tessellate.py
tests/: test_animation.py  test_classify.py  test_contact.py  test_emit.py  test_guided.py  test_guided_animation.py  test_invariants.py  test_loader.py  test_pipeline_gate_a.py  test_schema.py  test_sequencer.py
tests/fixtures/: generate.py  plate_and_screw.step  stacked_blocks.step  trapped_cube.step
