[project]
name = "asmplan"
version = "0.1.0"
description = "CAD/STEP to robot assembly planner"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2",
    "numpy>=1.24",
]

[project.optional-dependencies]
# Geometry stack (Stage 1+). pythonocc-core is conda-first; install via
# `conda install -c conda-forge pythonocc-core`. Kept out of the base deps so
# the schema/emit layers install anywhere.
geometry = ["build123d"]
dev = ["pytest>=8"]

[project.scripts]
asmplan = "asmplan.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
